objects/maps__CalEventLookup__c.object
<CustomObject>
    <fields>
        <fullName>maps__BaseObjectId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Base Object Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CalEventBaseObj__c</fullName>
        <label>Maps Calendar Event Base Object</label>
        <referenceTo>maps__CalEventBaseObj__c</referenceTo>
        <relationshipName>Maps_Event_Parents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>maps__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__LocationSource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__LookupFieldAPI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lookup Field API</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__ObjectAPI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object API</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__TypeAPI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TypeAPI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__TypeDefaultValue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TypeDefaultValue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Maps Calendar Event Lookup</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Calendar Event Lookups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>